combine training and experiment

--- a/trainAndExperiment.html
+++ b/trainAndExperiment.html
@@ -16,5 +16,5 @@
     <link href="https://unpkg.com/jspsych@7.3.3/css/jspsych.css" rel="stylesheet" type="text/css" />
   </head>
   <body></body>
-  <script src="./training.js"></script>
+  <script src="./trainAndExperiment.js"></script>
 </html>
