--- a/trainAndExperiment.html
+++ b/trainAndExperiment.html
@@ -12,6 +12,7 @@
     <script src="./jspsych/dist/plugin-survey-html-form.js"></script>
     <script src="./jspsych/dist/plugin-audio-button-response.js"></script>
     <script src="./jspsych/dist/plugin-fullscreen.js"></script>
+    <script src="./jspsych/dist/plugin-external-html.js"></script>
     <script src="./jspsych/dist/plugin-audio-keyboard-response.js"></script>
     <link href="https://unpkg.com/jspsych@7.3.3/css/jspsych.css" rel="stylesheet" type="text/css" />
   </head>
