modifico resumen + teclas

--- a/index.html
+++ b/index.html
@@ -180,6 +180,8 @@
         Muchas gracias, <br>
         Pedro Ballestero, Ian Grinspan y Abi Oppenheim.
     </p>
+
+    <p>Si tenés alguna duda o sugerencia, podés mandarnos un mail a <a href="mailto:aoppenheim@dc.uba.ar"> aoppenheim@dc.uba.ar</a>.</p>
     
     <hr>
     
