--- a/instructions_B.html
+++ b/instructions_B.html
@@ -71,6 +71,7 @@
       <ul>
         <li>Escucharás un tono breve.</li>
         <li>Tu objetivo es determinar si el tono es de <strong>baja Frecuencia</strong> o <strong>alta Frecuencia</strong>
+        <li>Pulsa 'A' si el tono es de baja frecuencia y 'S' si es de alta frecuencia.</li>
       </ul>
     </li>
     <li>
