--- a/instructions_digits_first.html
+++ b/instructions_digits_first.html
@@ -74,7 +74,8 @@
       <ul>
         <li>Escucharás un tono breve.</li>
         <li>Tu objetivo es determinar si el tono es de <strong>baja Frecuencia</strong> o <strong>alta Frecuencia</strong>
-      </ul>
+        <li>Pulsa 'A' si el tono es de baja frecuencia y 'S' si es de alta frecuencia.</li>      
+        </ul>
     </li>
     <li>
       Tarea 2: Comparación de Números <strong>(mano derecha)</strong>
