--- a/trainAndExperiment.html
+++ b/trainAndExperiment.html
@@ -14,6 +14,7 @@
     <script src="./jspsych/dist/plugin-fullscreen.js"></script>
     <script src="./jspsych/dist/plugin-external-html.js"></script>
     <script src="./jspsych/dist/plugin-audio-keyboard-response.js"></script>
+    <script src="./jspsych/dist/plugin-call-function.js"></script>
     <link href="https://unpkg.com/jspsych@7.3.3/css/jspsych.css" rel="stylesheet" type="text/css" />
   </head>
   <body></body>
