--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     <!-- add png here with descrption that says "image from paper"-->
     <p>
         <!-- <img src="img/paper_figure.png" alt="abstract" width="600" style="display: block; margin-left: auto; margin-right: auto;"> ADD CAPTION IN BOLD "Esquema del efecto PRP principal."-->
-        <img src="../src/img/paper_figure.png" alt="abstract" width="600" style="display: block; margin-left: auto; margin-right: auto;">
+        <img src="/src/img/paper_figure.png" alt="abstract" width="600" style="display: block; margin-left: auto; margin-right: auto;">
         <figcaption style="text-align: center; font-weight: bold;">Esquema del efecto <em>“período refractario psicológico”</em> principal.</figcaption>
     </p>
 
